v0.2.0, 2010-10-?? -- Learning from experience
 * Cleaner output from stats() (Issue #4)

v0.1.0, 2010-08-15 -- Initial release