@@ -1,4 +1,5 @@
 v0.2.0, 2010-10-?? -- Learning from experience
  * Cleaner output from stats() (Issue #4)
+ * Delay info for locked/bumped IDs now included in stats() (Issue #5) 
 
 v0.1.0, 2010-08-15 -- Initial release
